# mypy_clean_slate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy_error_report.txt  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  dependabot.yml  release.yml  test.yml
mypy_clean_slate/: __init__.py  main.py
scripts/: add_help_to_readme.py
tests/: test_generate_readme.py  test_mypy_clean_slate.py
