[tool.poetry]
name = "mypy_clean_slate"
version = "0.2.5"
description = "CLI tool for providing a clean slate for mypy usage within a project."
authors = ["George Lenton <georgelenton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geo7/mypy_clean_slate"
keywords = ['mypy', 'typing', 'typehint', 'type-hint']

[tool.poetry.dependencies]
python = "^3.9"
mypy = ">=0.910,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pre-commit = ">=2.17,<4.0"
ipython = ">=8.18.1"
ipdb = "^0.13.9"
ruff = ">=0.0.265"
pytest-cov = "^4.1.0"
pdbpp = "^0.10.3"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.scripts]
mypy_clean_slate = "mypy_clean_slate.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",   #  Missing type annotation for `self` in method
    "ANN102",   #  Missing type annotation for `cls` in classmethod
    "ANN204",   #  Missing return type annotation for special method `__attrs_post_init__`
    "ANN206",   #  Missing return type annotation for classmethod `get_all_human_readable`
    "D100",     #  Missing docstring in public module
    "COM812",
    "ISC001",
    "D101",     #  Missing docstring in public class
    "D102",     #  Missing docstring in public method
    "D103",     #  Missing docstring in public function
    "D104",     #  Missing docstring in public package
    "D105",     #  Missing docstring in magic method
    "D107",     #  Missing docstring in `__init__`
    "D211",     #  no-blank-line-before-class
    "D212",     #  multi-line-summary-first-line
    "D401",     #  First line of docstring should be in imperative mood.
    "PD901",    #  `df` is a bad variable name.
    "PLR0913",  #  Too many arguments to function call (6 > 5)
    "PLW1510",  #  `subprocess.run` without explicit `check` argument
    "PTH123",   #  `open()` should be replaced by `Path.open()`
    "PTH201",   #  [*] Do not pass the current directory explicitly to `Path`
    "RUF010",   #  [*] Use explicit conversion flag
    "S311",     #  Standard pseudo-random generators are not suitable for cryptographic purposes
    "S603",     #  `subprocess` call: check for execution of untrusted input
    "T100",     #  Trace found: `breakpoint` used
    "T201",     #  `print` found
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scratch/*" = ["ALL"]
"tests/*" = [
    "ANN001",  #  Missing type annotation for function argument `tmpdir`
    "ANN201",  #  Missing return type annotation for public function `test_get_file_types`
    "D100",    #  Missing docstring in public module
    "D101",    #  Missing docstring in public class
    "D102",    #  Missing docstring in public method
    "S101",    #  Use of `assert` detected
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
case-sensitive = true
combine-as-imports = true
